relational database models added for pokemon app

--- a/pokemon-app/views/layout.hbs
+++ b/pokemon-app/views/layout.hbs
@@ -9,8 +9,10 @@
 <body>
 
     <nav>
-        <a href="/pokemon/new">Add New</a>
+        <a href="/pokemon/new">Add New Pokemon</a>
         <a href="/pokemon">See All Pokemon</a>
+        <a href="/trainers">See Trainers</a>
+        <a href="/trainers/new">Add a Trainer</a>
     </nav>
 
     {{{body}}}
