--- a/pokemon-app/views/pokemon/new-pokemon.hbs
+++ b/pokemon-app/views/pokemon/new-pokemon.hbs
@@ -34,6 +34,16 @@
     <input type="text" name="moves">
 </div>
 
+<div>
+    Trainer: 
+
+    <select name="theTrainer">
+        {{#each trainers}}
+            <option value="{{this._id}}">{{this.name}}</option>
+        {{/each}}
+    </select>
+</div>
+
 
 
 
