--- a/pokemon-app/views/pokemon/pokemon-edit.hbs
+++ b/pokemon-app/views/pokemon/pokemon-edit.hbs
@@ -45,6 +45,21 @@
 </div>
 
 
+<div>
+    <select name="theTrainer">
+        {{#each trainers}}
+
+            {{#if this.blah}}
+                <option value="{{this._id}}" selected>{{this.name}}</option>
+            {{else}}
+                <option value="{{this._id}}">{{this.name}}</option>
+            {{/if}}
+
+        {{/each}}
+    </select>
+</div>
+
+
 
 
 <button>Save</button>
