basic signup and login added

--- a/pokemon-app/views/trainers/trainers-page.hbs
+++ b/pokemon-app/views/trainers/trainers-page.hbs
@@ -1,5 +1,9 @@
 <h1>Trainers Page</h1>
 
+{{#if theUserObject}}
+<h3> Welcome, {{theUserObject.username}} </h3>
+{{/if}}
+
 
 {{#each trainers}}
     <div>
