--- a/pokemon-app/views/layout.hbs
+++ b/pokemon-app/views/layout.hbs
@@ -13,6 +13,13 @@
         <a href="/pokemon">See All Pokemon</a>
         <a href="/trainers">See Trainers</a>
         <a href="/trainers/new">Add a Trainer</a>
+        <a href="/signup">Signup</a>
+        {{#if theUserObject}}
+        <form style="display:inline" action="/logout" method="POST"><button>Logout</button></form>
+        {{else}}
+        <a href="/login">Login</a>
+        {{/if}}
+
     </nav>
 
     {{{body}}}
