--- a/pokemon-with-user-roles/views/users/login.hbs
+++ b/pokemon-with-user-roles/views/users/login.hbs
@@ -19,3 +19,10 @@
 
     <button>Submit</button>
 </form>
+
+
+<div>
+Forgot Password?
+<a href="/reset-password/get-link">Reset Password</a>
+
+</div>
