--- a/pokemon-with-user-roles/views/layout.hbs
+++ b/pokemon-with-user-roles/views/layout.hbs
@@ -21,6 +21,9 @@
          {{else}}
             <a href="/login">Log In</a>
          {{/if}}
+         {{#if isAdmin}}
+         <a href="/see-users">See Users</a>
+         {{/if}}
       </nav>
 
 
